# python-project-template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  Makefile  README.md  compose.yml  index.html  mise.toml  mkdocs.yml  pyproject.toml
.Jules/: palette.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  template.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  question.md
.github/workflows/: check.yml  docs.yml  github-pages.yml
.jules/: bolt.md  sentinel.md
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md
docs/reference/: app.md
project/: app.py
reference/app/: index.html
scripts/: rename.py
search/: search_index.json
tests/: conftest.py  test_app.py
