[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':' (Black formatting)
    "W503",  # line break before binary operator (Black formatting)
]

[tool.coverage.run]
branch = true
source = ["project"]

[tool.coverage.report]
omit = ["tests/*"]
# fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache"]
reportMissingImports = "error"

[tool.poetry]
name = "project"
version = "0.1.0"
description = "Python Project Template"
authors = ["Amr Abed <amrabed>"]
license = "MIT"
readme = "docs/README.md"

[tool.poetry.scripts]
app = "project.app:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^5.13.2"
coverage = "^7.6.9"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
flake8-pyproject = "^1.2.3"
pyright = "^1.1.391"
mkdocs = "^1.6.1"
mkdocstrings = { version = "^0.27.0", extras=["python"] }
mkdocs-material = "^9.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
