[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "I"]

[tool.coverage.run]
branch = true
source = ["project"]

[tool.coverage.report]
omit = ["tests/*"]
# fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache"]
reportMissingImports = "error"

[tool.poetry]
name = "project"
version = "0.1.0"
description = "Python Project Template"
authors = ["Amr Abed <amrabed>"]
license = "MIT"
readme = "docs/README.md"

[tool.poetry.scripts]
app = "project.app:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.14.1"
coverage = "^7.6.9"
pre-commit = "^4.0.1"
pyright = "^1.1.391"
mkdocs = "^1.6.1"
mkdocstrings = { version = "^0.30.0", extras=["python"] }
mkdocs-material = "^9.6.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
