[project]
name = "project"
version = "0.1.0"
description = "Python Project Template"
readme = "docs/README.md"
authors = [{name = "Amr Abed", email = "amrabed@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
app = "project.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.15.12",
    "coverage>=7.6.9",
    "pre-commit>=4.0.1",
    "pyright>=1.1.391",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material>=9.6.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "I"]

[tool.coverage.run]
branch = true
source = ["project"]

[tool.coverage.report]
omit = ["tests/*"]
# fail_under = 90

[tool.pyright]
exclude = ["**/__pycache__", "**/.pytest_cache", ".venv"]
reportMissingImports = "error"
